...
            </View>
          </ScrollView>
        )}

        <DialogFooter>
          <Button
            testID={`select-close`}
            className="h-auto min-h-12 rounded-xl py-3"
            disabled={isProcessing}
            onPress={onClose}
          >
            <Text>{t('Common.close')}</Text>
          </Button>
...
