appId: ${APP_ID}
---
# 開いた時はキャンセルが非常時、未保存で移動時はキャンセル表示
- openLink:
    link: ${output.fixture.tournamentViewLink}
- extendedWaitUntil:
    visible: ${output.fixture.tournamentName}
    timeout: 30000
- assertVisible:
    id: 'unsaved-link-dialog'
- assertNotVisible: 'キャンセル'
- tapOn: "保存せず続行"
- pressKey: back
- assertVisible:
    id: 'unsaved-link-dialog'
- tapOn: 'キャンセル'
